@@ -7,6 +7,7 @@ Pint Changelog
 - Add `dim_sort` function to _formatter_helpers.
 - Add `dim_order` and `default_sort_func` properties to FullFormatter.
   (PR #1926, fixes Issue #1841)
+- Fix LaTeX siuntix formatting when using non_int_type=decimal.Decimal.
 
 
 0.23 (2023-12-08)
